--- a/Household_energy_student_version.ipynb
+++ b/Household_energy_student_version.ipynb
@@ -242,7 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our energy consumption data has been collected every minute over the time period. For purposes of modeling, aggregate the data to an hourly frequency."
+    "Our energy consumption data has been collected every minute over the time period. For purposes of modeling, aggregate the data to an hourly frequency.  Then, visualize the energy consumption by hour of the day to understand the usage pattern throughout a normal day."
    ]
   },
   {
@@ -265,7 +265,7 @@
     "### Add in weather data\n",
     "Now, add in weather data to your dataframe.  The hypothesis you have been asked to explore is that weather conditions impact energy usage, and so you expect that a model which includes weather parameters will perform better than one which accounts only for the time-dependent fluctuations in consumption over the course of a day.\n",
     "\n",
-    "Read in the weather data from 'Weather_simple.csv', add it to your dataframe and determine an encoding method to encode any categorical variables into numerical variables."
+    "Read in the weather data from 'Weather_simple.csv', add it to your dataframe and convert any categorical variables into numerical variables."
    ]
   },
   {
